mostly finished separating tool stat categories removed redundant traits
Took 2 hours 46 minutes